Fix issue where horizontal scroll bars appeared if rss / rss feed page results contained long URLs

--- a/modules/xerte/parent_templates/Nottingham/models_html5/rss.css
+++ b/modules/xerte/parent_templates/Nottingham/models_html5/rss.css
@@ -7,6 +7,8 @@
 		width: 100%;
 		padding-top:	1em;
 		padding-bottom:	1em;
+		box-sizing: border-box;
+		word-break: break-word;
 	}
 
 	#resultsHolder div p, #resultsHolder div a {
